<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.opengto.buzondequejas.user.SigninActivity"
    android:background="@drawable/signin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/logobuzon"
                />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"


                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="onclickLogin"
                    />


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:onClick="goSignup"
                        />

                    <ProgressBar
                        android:id="@+id/progressbarSignin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

            </LinearLayout>


        </ScrollView>



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>